Sửa lại FileUtils.java, fix lỗi 2 file khác nhau có cùng tên không được uplaod lên server